bdr.BDR2.scala.error
Compilation error:
BDR2:2: error: not found: value message
  message match{
  ^